crates/rome_js_formatter/tests/specs/prettier/typescript/override-modifiers/override-modifier.ts.snap
---
source: crates/rome_js_formatter/tests/prettier_tests.rs
assertion_line: 125
expression: override-modifier.ts

---
# Input
```js
class MyClass extends BaseClass {
  override show() {}
  public override show() {}
  override size = 5;
  override readonly size = 5;
  abstract override foo: string;
  static override foo: string;
}

```

# Output
```js
class MyClass extends BaseClass {
  override show() {}
  public override show() {}
  override size = 5;
  override readonly size = 5;
  abstract override foo: string;
  static override foo: string;
}

```

# Errors
```
error[SyntaxError]: Only abstract classes can have abstract members
  ┌─ override-modifier.ts:6:3
  │
6 │   abstract override foo: string;
  │   ^^^^^^^^


```


